mudança no código do view para apagar dica do textarea

--- a/src/view/MenuView.form
+++ b/src/view/MenuView.form
@@ -62,7 +62,10 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="0" pref="29" max="32767" attributes="0"/>
+                      <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
@@ -100,7 +103,7 @@
                       <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jLabelGifPaginaInicial" pref="704" max="32767" attributes="0"/>
+                              <Component id="jLabelGifPaginaInicial" pref="675" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -185,7 +188,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jLabelTopoPaginaInicial" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="lbTopoPaginaInicial" pref="437" max="32767" attributes="0"/>
+                              <Component id="lbTopoPaginaInicial" pref="414" max="32767" attributes="0"/>
                               <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                               <Component id="jLabelImgTopoPaginaInicial" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
